--- a/app/views/products/_cardproduct.html.erb
+++ b/app/views/products/_cardproduct.html.erb
@@ -8,6 +8,7 @@
     <!-- Section heading -->
     <h2 class="text-left mb-5 text-center">Un achat solidaire</h2>
     <p class="text-left mb-5 text-center">Tout achat de produit nous rapproche de l’objectif : permettre à l’équipe Raidators de participer à Europ.Raid pour acheminer 70Kg de matériels vers des écoles défavorisées. </p>
+
   </section>
   <!--Section: Content-->
 </div>
@@ -40,6 +41,7 @@
                 <% if current_user && current_user.admin %>
                 <button type="button" class="btn btn-outline-primary p-2 mx-1 mt-2"><%= link_to "Modifier", edit_product_path(product.id) %></button>
                 <button type="button" class="btn btn-outline-primary p-2 mx-2 mt-2"><%= link_to "Supprimer", product_path(product.id), method: :DELETE %></button> 
+                <button type="button" class="btn btn-outline-primary p-2 mx-2 mt-2"><%= link_to "ajouter", new_product_path %></button> 
                 <%end%> 
                 <%end%>    
               </div>
