--- a/app/views/products/_cardproduct.html.erb
+++ b/app/views/products/_cardproduct.html.erb
@@ -14,70 +14,6 @@
 <br>
 <hr>
 
-<!--Section: Content-->
-<div class="container mt-5">
-  <section class="mb-10">
-
-    <div class="row">
-    
-    <h2> Don sans contrepartie  </h2>
-      <% @products.each do |product| %>
-        <% if product.donation? %>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100 card small-card-raidators card-product-aligment-center">
-            <div class="card-img-top "> <%= image_tag product.image_url, width: "100%", class:"small-card-image-raidators" %> </div>
-
-            <!-- Card content -->
-              <div class="card-body">
-                <h3 class="black-text"> <%= product.title %> </h3>
-                <p class="card-title text-muted font-small mt-3 mb-2"> Prix:<%= product.price %> </p>
-                <% if user_signed_in? %>
-                  <%= link_to "soutenir le projet", selected_products_path(product_id: product.id), method: 'POST', class:"btn btn-success btn-raidators btn-md  mx-0" %>
-                <% else %>
-                  <%= link_to "soutenir le projet", new_user_session_path, class:"btn btn-success btn-raidators btn-md  mx-0" %>
-                <% end %>
-                <br>
-                <% if current_user && current_user.admin %>
-                <button type="button" class="btn btn-outline-primary p-2 mx-1 mt-2"><%= link_to "Modifier", edit_product_path(product.id) %></button>
-                <button type="button" class="btn btn-outline-primary p-2 mx-2 mt-2"><%= link_to "Supprimer", product_path(product.id), method: :DELETE %></button> 
-                <%end%> 
-                <%end%>    
-              </div>
-          </div>
-        </div>
-      <% end %>
-    </div>
-    <div class="row">
-
-    <h2> Don avec contrepartie </h2>
-      <% @products.each do |product| %>
-        <% if product.merchandising? %>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100 card small-card-raidators">
-            <div class="card-img-top "> <%= image_tag product.image_url, width: "100%", class:"small-card-image-raidators" %> </div>
-    
-            <!-- Card content -->
-              <div class="card-body">
-                <h3 class="black-text"> <%= product.title %> </h3>
-                <p class="card-title text-muted font-small mt-3 mb-2"> Prix:<%= product.price %> </p>
-                <% if user_signed_in? %>
-                  <%= link_to "soutenir le projet", selected_products_path(product_id: product.id), method: 'POST', class:"btn btn-success btn-raidators btn-md btn-rounded mx-0" %>
-                <% else %>
-                  <%= link_to "soutenir le projet", new_user_session_path, class:"btn btn-success btn-raidators btn-md btn-rounded mx-0" %>
-                <% end %>
-                <br>
-                <% if current_user && current_user.admin %>
-                <button type="button" class="btn btn-outline-primary p-2 mx-1 mt-2"><%= link_to "Modifier", edit_product_path(product.id) %></button>
-                <button type="button" class="btn btn-outline-primary p-2 mx-2 mt-2"><%= link_to "Supprimer", product_path(product.id), method: :DELETE %></button> 
-                <%end%> 
-                <%end%>    
-              </div>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </section>
-</div>
 
 
     <div class="container mt-5">
@@ -96,94 +32,23 @@
               <div class="col-lg-8">
 
                 <!-- Pills navs -->
-                <ul class="nav md-pills nav-justified pills-primary font-weight-bold">
+                <ul class="nav md-pills flex-center flex-wrap mx-0" role="tablist">
                   <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#tabCheckoutBilling123" role="tab">1. Tout </a>
+                    <a class="nav-link font-weight-bold text-uppercase" data-toggle="tab" href="#panel31" role="tab">2. Don avec contrepartie</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#tabCheckoutAddons123" role="tab">2. Don avec contrepartie</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#tabCheckoutPayment123" role="tab">3. Don sans contrepartie</a>
+                    <a class="nav-link font-weight-bold text-uppercase" data-toggle="tab" href="#panel32" role="tab">3. Don sans contrepartie</a>
                   </li>
                 </ul>
 
                 <!-- Pills panels -->
-                <div class="tab-content pt-4">
-
-                  <!--Panel 1-->
-                  <div class="tab-pane fade" id="tabCheckoutBilling123" role="tabpanel">
-
-                    <!--Grid row-->
-                    <div class="row">
-
-                      <% @products.each do |product| %>
-                        <% if product.donation? %>
-                        <div class="col-lg-4 col-md-6 mb-4">
-                          <div class="card h-100 card small-card-raidators card-product-aligment-center">
-                            <div class="card-img-top "> <%= image_tag product.image_url, width: "100%", class:"small-card-image-raidators" %> </div>
-                
-                            <!-- Card content -->
-                              <div class="card-body">
-                                <h3 class="black-text"> <%= product.title %> </h3>
-                                <p class="card-title text-muted font-small mt-3 mb-2"> Prix:<%= product.price %> </p>
-                                <% if user_signed_in? %>
-                                  <%= link_to "soutenir le projet", selected_products_path(product_id: product.id), method: 'POST', class:"btn btn-success btn-raidators btn-md  mx-0" %>
-                                <% else %>
-                                  <%= link_to "soutenir le projet", new_user_session_path, class:"btn btn-success btn-raidators btn-md  mx-0" %>
-                                <% end %>
-                                <br>
-                                <% if current_user && current_user.admin %>
-                                <button type="button" class="btn btn-outline-primary p-2 mx-1 mt-2"><%= link_to "Modifier", edit_product_path(product.id) %></button>
-                                <button type="button" class="btn btn-outline-primary p-2 mx-2 mt-2"><%= link_to "Supprimer", product_path(product.id), method: :DELETE %></button> 
-                                <%end%> 
-                                <%end%>    
-                              </div>
-                          </div>
-                        </div>
-                      <% end %>
-
-                      <% @products.each do |product| %>
-                        <% if product.merchandising? %>
-                        <div class="col-lg-4 col-md-6 mb-4">
-                          <div class="card h-100 card small-card-raidators">
-                            <div class="card-img-top "> <%= image_tag product.image_url, width: "100%", class:"small-card-image-raidators" %> </div>
-                    
-                            <!-- Card content -->
-                              <div class="card-body">
-                                <h3 class="black-text"> <%= product.title %> </h3>
-                                <p class="card-title text-muted font-small mt-3 mb-2"> Prix:<%= product.price %> </p>
-                                <% if user_signed_in? %>
-                                  <%= link_to "soutenir le projet", selected_products_path(product_id: product.id), method: 'POST', class:"btn btn-success btn-raidators btn-md btn-rounded mx-0" %>
-                                <% else %>
-                                  <%= link_to "soutenir le projet", new_user_session_path, class:"btn btn-success btn-raidators btn-md btn-rounded mx-0" %>
-                                <% end %>
-                                <br>
-                                <% if current_user && current_user.admin %>
-                                <button type="button" class="btn btn-outline-primary p-2 mx-1 mt-2"><%= link_to "Modifier", edit_product_path(product.id) %></button>
-                                <button type="button" class="btn btn-outline-primary p-2 mx-2 mt-2"><%= link_to "Supprimer", product_path(product.id), method: :DELETE %></button> 
-                                <%end%> 
-                                <%end%>    
-                              </div>
-                          </div>
-                        </div>
-                      <% end %>
-                     
-                    </div>
-                
-
-
-                    </div>
-                    <!--Grid row-->
-
-                  </div>
-                  <!--/.Panel 1-->
+                <div class="tab-content mb-5 align-items-center">
 
                   <!--Panel 2-->
-                  <div class="tab-pane fade" id="tabCheckoutAddons123" role="tabpanel">
+                  <div class="tab-pane fade fade in show active" id="panel31" role="tabpanel">
 
                     <!--Grid row-->
-                    <div class="row">
+                    <div class="row mx-4 my-4 justify-content-center">
 
                       <% @products.each do |product| %>
                         <% if product.donation? %>
@@ -221,9 +86,9 @@
                   <!--/.Panel 2-->
 
                   <!--Panel 3-->
-                  <div class="tab-pane fade" id="tabCheckoutPayment123" role="tabpanel">
+                  <div class="tab-pane fade" id="panel32" role="tabpanel">
 
-                    <div class="row">
+                    <div class="row mx-4 my-4 justify-content-center">
                       <% @products.each do |product| %>
                         <% if product.merchandising? %>
                         <div class="col-lg-4 col-md-6 mb-4">
