--- a/app/views/carts/_web_cart.html.erb
+++ b/app/views/carts/_web_cart.html.erb
@@ -37,7 +37,7 @@
                           <% @cart.selected_products.each do |product| %> 
                           <hr class="mb-5">
 
-                          <img class="img-fluid" alt="Second sample image"> <%=product.product.image_url %> </img>
+                          <img class="img-fluid" alt="Second sample image"> <%=image_tag product.product.image_url %> </img>
                           <% end %>
       
       
