--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,7 +19,7 @@
 
               <!-- Card image -->
               <div class="view view-cascade overlay">
-                <%= @post.avatar %>
+                <%= image_tag @post.avatar %>
                 <div class="mask rgba-white-slight"></div>
               </div>
 
